--- a/environments/production/postgresql.yml
+++ b/environments/production/postgresql.yml
@@ -13,6 +13,7 @@ pgbouncer_override:
   pgbouncer_pool_mode: transaction
   pgbouncer_pool_timeout: 1
   pgbouncer_reserve_pool: 5
+  pgboucner_auth_type: md5
 
 
 # We're temporarily disabling read replicas
