--- a/src/commcare_cloud/ansible/roles/pgbouncer/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/tasks/main.yml
@@ -22,6 +22,7 @@
 
 - name: pgbouncer hba
   template: src=pgbouncer_hba.conf.j2 dest="{{ pgbouncer_hba }}"
+  when: pgboucner_auth_type == 'hba'
   notify: Reload pgbouncer
   tags:
     - pgbouncer
