--- a/environments/pna/postgresql.yml
+++ b/environments/pna/postgresql.yml
@@ -4,6 +4,7 @@ pgbouncer_override:
   pgbouncer_pool_mode: transaction
   pgbouncer_pool_timeout: 1
   pgbouncer_reserve_pool: 5
+  pgboucner_auth_type: md5
 
 postgres_override:
   postgresql_effective_cache_size: 8GB
