--- a/src/commcare_cloud/ansible/roles/pgbouncer/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/defaults/main.yml
@@ -4,6 +4,7 @@ pgbouncer_config_home: /etc/pgbouncer
 pgbouncer_ini: "{{ pgbouncer_config_home }}/pgbouncer.ini"
 pgbouncer_users: "{{ pgbouncer_config_home }}/userlist.txt"
 pgbouncer_hba: "{{ pgbouncer_config_home }}/pgbouncer_hba.conf"
+pgbouncer_auth_type: "md5"  # either 'md5' or 'hba'
 
 pgbouncer_max_connections: 100
 pgbouncer_default_pool: 15
