--- a/environments/india/postgresql.yml
+++ b/environments/india/postgresql.yml
@@ -32,6 +32,10 @@ dbs:
     - django_alias: icds-ucr
       name: icds-ucr
       django_migrate: True  # ICDS dashboard models are stored here
+    - django_alias: icds-ucr-citus
+      name: icds-ucr-citus
+      django_migrate: True  # ICDS dashboard models are stored here
+      host: citus0
     - django_alias: aaa-data
       name: aaa-data
       django_migrate: True  # AAA dashboard models are stored here
