--- a/environments/staging/aws-resources.yml
+++ b/environments/staging/aws-resources.yml
@@ -5,6 +5,9 @@ control0-staging: 10.201.10.116
 couch0-staging: 10.201.40.11
 couch1-staging: 10.201.40.38
 couch2-staging: 10.201.40.146
+couch3-staging: 10.201.40.182
+couch4-staging: 10.201.40.15
+couch5-staging: 10.201.40.106
 es2-staging: 10.201.40.143
 es3-staging: 10.201.40.171
 formplayer1-staging: 10.201.10.234
