--- a/environments/staging/inventory.ini
+++ b/environments/staging/inventory.ini
@@ -48,10 +48,22 @@ remote_postgresql
 [couch2]
 10.201.40.146 hostname=couch2-staging ufw_private_interface=eth0
 
+[couch3]
+10.201.40.182 hostname=couch3-staging ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+
+[couch4]
+10.201.40.15 hostname=couch4-staging ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+
+[couch5]
+10.201.40.106 hostname=couch5-staging ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+
 [couchdb2:children]
 couch0
 couch1
 couch2
+couch3
+couch4
+couch5
 
 [couchdb2_proxy:children]
 couch0
