--- a/environments/staging/inventory.ini
+++ b/environments/staging/inventory.ini
@@ -1,7 +1,7 @@
 # This file currently contains a lot of commented-out hosts
 # that refer to presumed eventual hosts that will live on AWS but don't yet exist
 # As they get added, we'll uncomment them and the IPs will get populated from live AWS resources
-# using the aws-fill-inventory command..
+# using the aws-fill-inventory command.
 
 [proxy0]
 10.201.20.89 hostname=proxy0-staging ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=3.216.37.252
