--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -212,6 +212,12 @@ db1
 [airflow:children]
 airflow0
 
+[remote_postgresql:children]
+rds_pgmain0
+
+[ansible_skip:children]
+remote_postgresql
+
 [openvpn]
 10.203.20.132  # ansible_host=13.127.238.159
 
