--- a/src/commcare_cloud/ansible/roles/nginx/vars/couchdb2.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/couchdb2.yml
@@ -2,13 +2,13 @@
 nginx_sites:
 - server:
    balancers:
-    - name: "{{ deploy_env }}_couchdb_{{ couchdb2_proxy_port }}"
+    - name: "couchdb_{{ couchdb2_proxy_port }}"
       hosts: couchdb2
       port: "{{ couchdb2_port }}"
       params:
         # http://nginx.org/en/docs/http/ngx_http_upstream_module.html#server
         fail_timeout: 5s
-   file_name: "{{ deploy_env }}_couchdb_{{ couchdb2_proxy_port }}"
+   file_name: "couchdb_{{ couchdb2_proxy_port }}"
    listen: "'{{ couchdb2_proxy_port }}'"
    client_max_body_size: "{{ couchdb2_client_max_body_size }}"
    upstream_port: "{{ couchdb2_port }}"
@@ -18,13 +18,13 @@ nginx_sites:
    - "X-Forwarded-For $proxy_add_x_forwarded_for"
    locations:
      - name: /
-       balancer: "{{ deploy_env }}_couchdb_{{ couchdb2_proxy_port }}"
+       balancer: "couchdb_{{ couchdb2_proxy_port }}"
        proxy_redirect: ' off'
        client_body_buffer_size: ' 512k'
        proxy_max_temp_file_size: ' 0'
        proxy_read_timeout: ' 65s'
      - name: "~ ^/(.*)/_changes"
-       balancer: "{{ deploy_env }}_couchdb_{{ couchdb2_proxy_port }}"
+       balancer: "couchdb_{{ couchdb2_proxy_port }}"
        proxy_redirect: ' off'
        proxy_buffering: ' off'
        proxy_read_timeout: ' 65s'
