--- a/environments/india/postgresql.yml
+++ b/environments/india/postgresql.yml
@@ -37,6 +37,9 @@ dbs:
       name: icds-ucr-citus
       django_migrate: True  # ICDS dashboard models are stored here
       host: citus0
+      pg_config:
+        - name: citus.shard_count
+          value: 32
     - django_alias: aaa-data
       name: aaa-data
       django_migrate: True  # AAA dashboard models are stored here
