--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/set_up_dbs.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/set_up_dbs.yml
@@ -78,22 +78,17 @@
   assert: { that: "item.host in groups.postgresql or item.host in groups.pg_standby or item.host == '127.0.0.1' or item.host in groups.citusdb_cordinator " }
   with_items: "{{ postgresql_dbs.all }}"
 
-- name: Create PostgreSQL databases
+- name: Update PostgreSQL database config
   become_user: "{{ db_is_remote and 'ansible' or 'postgres' }}"
   vars:
     ansible_ssh_pipelining: true
-  postgresql_db:
-    name: "{{ item.name }}"
-    state: present
+  postgresql_set:
+    name: "{{ item.1.name }}"
+    value: "{{ item.1.value }}"
+    db: "{{ item.name }}"
     port: "{{ postgresql_port }}"
-    owner: "{{ item.user }}"
-    encoding: 'UTF-8'
-    lc_collate: 'en_US.UTF-8'
-    lc_ctype: 'en_US.UTF-8'
-    template: 'template0'
     login_host: "{{ db_is_remote and postgresql_host or omit }}"
     login_user: "{{ db_is_remote and postgres_users.root.username or omit }}"
     login_password: "{{ db_is_remote and postgres_users.root.password or omit }}"
-
-  with_items: "{{ postgresql_dbs.all }}"
-  when: item.create and ((item.host == postgresql_host) or is_monolith|bool)
+  loop: "{{ postgresql_dbs.all | subelements('pg_config', 'skip_missing=True') }}"
+  when: item.0.create and ((item.0.host == postgresql_host) or is_monolith|bool)
