--- a/src/commcare_cloud/ansible/deploy_proxy.yml
+++ b/src/commcare_cloud/ansible/deploy_proxy.yml
@@ -123,6 +123,8 @@
       vars:
         site_present: "{{ 'reach_ssl' in special_sites }}"
         site_config: {name: reach_ssl, vars_file: reach_ssl}
+      tags:
+        - nginx_sites
 
 - name: CAS Proxy
   hosts: cas_proxy
@@ -133,6 +135,8 @@
       vars:
         site_present: "{{ 'cas_ssl' in special_sites }}"
         site_config: {name: cas_ssl, vars_file: cas_ssl}
+      tags:
+        - nginx_sites
 
 - name: PNA Proxy
   hosts: pna_proxy
@@ -143,6 +147,8 @@
       vars:
         site_present: "{{ 'pna_ssl' in special_sites }}"
         site_config: {name: pna_ssl, vars_file: pna_ssl}
+      tags:
+        - nginx_sites
 
 - name: Move logrotate to hourly
   hosts:
