--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -197,7 +197,7 @@ servers:
     os: trusty
 
   - server_name: "celery0-production"
-    server_instance_type: m5.4xlarge
+    server_instance_type: t3.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
@@ -211,14 +211,14 @@ servers:
     group: "celery"
     os: trusty
   - server_name: "celery2-production"
-    server_instance_type: m5.4xlarge
+    server_instance_type: t3.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
     group: "celery"
     os: trusty
   - server_name: "celery3-production"
-    server_instance_type: m5.4xlarge
+    server_instance_type: t3.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
