--- a/src/commcare_cloud/ansible/roles/nginx/vars/cchq_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cchq_ssl.yml
@@ -18,7 +18,7 @@ nginx_sites:
       max_size: "2g"
       inactive_time: "24h"
    file_name: "{{ deploy_env }}_commcare"
-   listen: "443 ssl{{ ' http2' if ansible_distribution_version != '12.04' else '' }}{{ ' default_server' if deploy_env == primary_ssl_env else '' }}"
+   listen: "443 ssl http2{{ ' default_server' if deploy_env == primary_ssl_env else '' }}"
    root: "/var/www/html"
    server_name: "{{ SITE_HOST }}"
    client_max_body_size: 600m
