--- a/environments/production/app-processes.yml
+++ b/environments/production/app-processes.yml
@@ -1,7 +1,7 @@
 newrelic_djangoagent: False
 newrelic_javaagent: True
 datadog_pythonagent: True
-django_command_prefix: '{{ virtualenv_home }}/bin/ddtrace-run '
+django_command_prefix: ''
 celery_command_prefix: ''
 gunicorn_workers_static_factor: 0
 gunicorn_workers_factor: 2
