--- a/environments/swiss/app-processes.yml
+++ b/environments/swiss/app-processes.yml
@@ -8,6 +8,7 @@ celery_processes:
     saved_exports_queue:
       concurrency: 1
       optimize: True
+  None:
     flower: {}
 pillows:
   swiss0:
