--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -11,8 +11,7 @@ DATADOG_TRACE:
   TAGS:
     env: production
 
-LOCAL_APPS:
-  - {name: 'ddtrace.contrib.django', host: webworkers}
+LOCAL_APPS: []
 
 elasticsearch_endpoint: '{{ groups.elasticsearch.0 }}'
 elasticsearch_cluster_name: 'prodhqes-1.x'
