--- a/environments/swiss/app-processes.yml
+++ b/environments/swiss/app-processes.yml
@@ -2,8 +2,10 @@ formplayer_memory: "1024m"
 
 celery_processes:
   swiss0:
-    repeat_record_queue,celery,export_download_queue,case_import_queue,reminder_case_update_queue,background_queue,case_rule_queue,analytics_queue,celery_periodic,email_queue,reminder_rule_queue:
-      concurrency: 4
+    repeat_record_queue,celery,export_download_queue,case_import_queue,reminder_case_update_queue:
+      concurrency: 3
+    background_queue,case_rule_queue,analytics_queue,celery_periodic,email_queue,reminder_rule_queue:
+      concurrency: 3
     beat: {}
     saved_exports_queue:
       concurrency: 1
