do not reuse celery workers for agg

--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -29,6 +29,7 @@ celery_processes:
       concurrency: 6
     icds_aggregation_queue:
       concurrency: 20
+      max_tasks_per_child: 1
     case_rule_queue:
       concurrency: 2
     sumologic_logs_queue:
