--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -12,9 +12,13 @@ nginx_sites:
       hosts: formplayer
       port: "{{ formplayer_port }}"
       method: "hash $cookie_sessionid consistent"
+   mappings:
+    - name: "$fresh_sync"
+      variable: "$http_x_commcarehq_lastsynctoken"
+      value: "$server_name"
    limit_req_zones:
     - name: "restore"
-      zone: "$server_name"
+      zone: "$fresh_sync"
       size: "10m"
       rate: "15r/s"
     - name: "submissions"
