--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -13,7 +13,7 @@ nginx_sites:
       port: "{{ formplayer_port }}"
       method: "hash $cookie_sessionid consistent"
    mappings:
-    - name: "$sync_update"
+    - name: "$incremental_sync"
       variable: "$http_x_commcarehq_lastsynctoken"
       # If header is provided, rate limit on $server_name
       default_value: "$server_name"
@@ -22,8 +22,8 @@ nginx_sites:
         - key: '""'
           value: '""'
    limit_req_zones:
-    - name: "restore" # Limits restores that are not new device or 412s
-      zone: "$sync_update"
+    - name: "incremental_restore" # Limits restores that are not new device or 412s
+      zone: "$incremental_sync"
       size: "10m"
       rate: "15r/s"
     - name: "overall_restore" # Limits all restores
@@ -98,7 +98,7 @@ nginx_sites:
        proxy_next_upstream_tries: 1
        proxy_read_timeout: 900s
        limit_reqs:
-         - zone_name: "restore"
+         - zone_name: "incremental_restore"
            burst: 0
            nodelay: True
          - zone_name: "overall_restore"
