--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -128,6 +128,8 @@ kafka0
 [celery6]
 10.202.12.126 hostname=celery6-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
+[celery7]
+10.202.12.105 hostname=celery7-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [celery:children]
 celery1
@@ -137,6 +139,7 @@ celery3
 celery4
 celery5
 celery6
+celery7
 
 [celery:vars]
 swap_size=8G
