--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -252,6 +252,13 @@ servers:
     volume_size: 80
     group: "celery"
     os: bionic
+  - server_name: "celery7-production"
+    server_instance_type: t3.xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 80
+    group: "celery"
+    os: bionic
 
   - server_name: "pillow0-production"
     server_instance_type: r5a.4xlarge
