--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -3,12 +3,13 @@ postgresql_cluster_name: 'main'
 postgresql_port: 5432
 postgresql_ssl_enabled: False
 postgresql_dir_original_path: /var/lib/postgresql
+postgresql_bin_path: "/usr/lib/{{ postgresql_version }}/bin"
 postgresql_dir_path: "{{ encrypted_root }}/postgresql"
 postgresql_process_path: "{{ '/var/run/postgresql' if ansible_distribution_version == '18.04' else postgresql_dir_path }}"
 postgresql_backup_dir: "{{ encrypted_root }}/backups/postgresql"
-postgresql_home: "{{ postgresql_dir_path }}/{{ postgresql_version }}/main"
-postgresql_config_home: "/etc/postgresql/{{ postgresql_version }}/main"
-postgresql_pid_file: "{{ postgresql_process_path }}/{{ postgresql_version }}-main.pid"
+postgresql_home: "{{ postgresql_dir_path }}/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
+postgresql_config_home: "/etc/postgresql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
+postgresql_pid_file: "{{ postgresql_process_path }}/{{ postgresql_version }}-{{ postgresql_cluster_name }}.pid"
 postgres_install_dir: "/usr/lib/postgresql/{{ postgresql_version }}"
 postgresql_log_directory: "{{ postgresql_home }}/pg_log"
 postgresql_recovery_conf: "{{ postgresql_home }}/recovery.conf"
