--- a/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
@@ -84,6 +84,7 @@
       - httplib2
       - pexpect
     executable: pip2
+    umask: 0022
   become: yes
 
 - name: Install virtualenv-clone
@@ -92,3 +93,4 @@
     name: virtualenv-clone
     version: 0.5.1
     executable: pip2
+    umask: 0022
