--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
@@ -36,6 +36,13 @@
       - python3-psycopg2
   when: ansible_distribution_version == '18.04'
 
+- name: Install pglogical
+  apt:
+    name:
+      - postgresql-9.6-pglogical
+  when: postgresql_wal_level == 'logical'
+
+
 - name: Create service config folder
   become: yes
   file:
