Fix nginx upgrade process for no downtime

--- a/src/commcare_cloud/ansible/roles/nginx/handlers/main.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/handlers/main.yml
@@ -1,3 +1,7 @@
 ---
 - name: reload nginx
   include_tasks: reload.yml
+
+- name: quick start nginx
+  become: yes
+  service: name=nginx state=started enabled=yes
