--- a/src/commcare_cloud/ansible/roles/nginx/tasks/install.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/tasks/install.yml
@@ -16,6 +16,9 @@
 - name: Install nginx
   become: yes
   apt: name="nginx=1.17.3-1~bionic" state=present update_cache=yes cache_valid_time=3600
+  notify: 'quick start nginx'
+
+- meta: flush_handlers  # need to start nginx as quickly as possible for minimal downtime
 
 - name: Make sure nofile ulimit is high
   become: yes
