--- a/src/commcare_cloud/ansible/roles/nginx/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/defaults/main.yml
@@ -7,3 +7,5 @@ special_sites: []
 primary_ssl_env: ""
 nginx_hsts_max_age: null
 nginx_worker_rlimit_nofile: null
+nginx_version: 1.17.3
+nginx_apt_package: "nginx={{ nginx_version }}-1~bionic"
