--- a/src/commcare_cloud/ansible/roles/nginx/tasks/install.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/tasks/install.yml
@@ -15,7 +15,20 @@
 
 - name: Install nginx
   become: yes
-  apt: name="nginx=1.17.3-1~bionic" state=present update_cache=yes cache_valid_time=3600
+  apt: name="{{ nginx_apt_package }}" state=present update_cache=yes cache_valid_time=3600
+  register: install_nginx
+  failed_when: no
+  notify: 'quick start nginx'
+
+- name: Fix broken install
+  become: yes
+  shell: 'apt --fix-broken install -y'
+  when: "install_nginx is defined and '--fix-broken' in install_nginx.stderr"
+
+- name: Try installing nginx again
+  become: yes
+  apt: name="{{ nginx_apt_package }}" state=present update_cache=yes cache_valid_time=3600
+  when: "install_nginx is defined and '--fix-broken' in install_nginx.stderr"
   notify: 'quick start nginx'
 
 - meta: flush_handlers  # need to start nginx as quickly as possible for minimal downtime
