--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -353,6 +353,13 @@ proxy_servers:
     volume_size: 80
     group: "proxy"
     os: trusty
+  - server_name: "proxy1-production"
+    server_instance_type: "t3.medium"
+    network_tier: "public"
+    az: "a"
+    volume_size: 80
+    group: "proxy"
+    os: bionic
 
 
 rds_instances:
