--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -251,28 +251,28 @@ servers:
     os: trusty
 
   - server_name: "celery9-production"
-    server_instance_type: t3.2xlarge
+    server_instance_type: r5.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
     group: "celery"
     os: bionic
   - server_name: "celery10-production"
-    server_instance_type: t3.2xlarge
+    server_instance_type: r5.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
     group: "celery"
     os: bionic
   - server_name: "celery11-production"
-    server_instance_type: t3.2xlarge
+    server_instance_type: r5.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
     group: "celery"
     os: bionic
   - server_name: "celery12-production"
-    server_instance_type: t3.xlarge
+    server_instance_type: r5.xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 150
