--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -119,15 +119,17 @@ servers:
   - server_name: "esmaster3-production"
     server_instance_type: t3.large
     network_tier: "db-private"
-    az: "a"
+    az: "b"
     group: "elasticsearch"
     os: bionic
+    volume_size: 40
   - server_name: "esmaster4-production"
     server_instance_type: t3.large
     network_tier: "db-private"
-    az: "a"
+    az: "b"
     group: "elasticsearch"
     os: bionic
+    volume_size: 40
   - server_name: "esmaster5-production"
     server_instance_type: t3.large
     network_tier: "db-private"
