--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -90,6 +90,10 @@ nginx_sites:
        proxy_cache_lock_timeout: 30s
        client_body_buffer_size: 5m
        proxy_ignore_headers: Set-Cookie
+       limit_reqs:
+         - zone_name: "app_downloads"
+           burst: 50
+           nodelay: True
      - name: "/accounts/login"
        balancer: "{{ deploy_env }}_cas_commcare"
        proxy_redirect: "http://{{ CAS_SITE_HOST }} https://{{ CAS_SITE_HOST }}"
