Add command to roll out supervisor changes to end of recent changelog entries

--- a/changelog/0024-define-management-commands.yml
+++ b/changelog/0024-define-management-commands.yml
@@ -40,3 +40,5 @@ update_steps: |
     server_hostname:
       submission_reprocessing_queue:
   ```
+
+  5. Run `cchq <env> update-supervisor-confs`
