--- a/changelog/0025-rename-management-commands.yml
+++ b/changelog/0025-rename-management-commands.yml
@@ -17,3 +17,4 @@ details: |
 
 update_steps: |
   1. Change any references to the old management command names to the new name in `app-processes.yml`
+  2. Run `cchq <env> update-supervisor-confs`
