--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -72,6 +72,7 @@ nginx_sites:
          - zone_name: "multimedia"
            burst: 50
            nodelay: True
+       limit_rate: 500k
      - name: "/a/icds-test/apps/download"
        balancer: "{{ deploy_env }}_cas_commcare"
        proxy_redirect: "http://{{ CAS_SITE_HOST }} https://{{ CAS_SITE_HOST }}"
