--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -21,6 +21,12 @@ nginx_sites:
         # If the header is not provided, do not rate limit
         - key: '""'
           value: '""'
+    # Extract request path from request_uri (https://stackoverflow.com/a/45587134)
+    - name: "$request_uri_path"
+      variable: "$request_uri"
+      var_mappings:
+        - key: '"~^(?P<path>[^?]*)(\?.*)?$"'
+          value: '$path'
    limit_req_zones:
     - name: "incremental_restore" # Limits restores that are not new device or 412s
       zone: "$incremental_sync"
@@ -88,6 +94,8 @@ nginx_sites:
        proxy_cache: app_cache
        proxy_cache_lock: "on"
        proxy_cache_lock_timeout: 30s
+       # exclude username arg from cache key
+       proxy_cache_key: "$proxy_host$request_uri_path$arg_latest$arg_profile"
        client_body_buffer_size: 5m
        proxy_ignore_headers: Set-Cookie
        limit_reqs:
