--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -136,6 +136,7 @@ localsettings:
   ENABLE_SOFT_ASSERT_EMAILS: True
   HQ_INSTANCE: 'icds'
   INACTIVITY_TIMEOUT: 20160
+  ICDS_USE_CITUS: True
   INVOICE_FROM_ADDRESS:
     'name': "Dimagi, Inc."
     'first_line': "585 Massachusetts Ave"
