--- a/src/commcare_cloud/ansible/deploy_couchdb2.yml
+++ b/src/commcare_cloud/ansible/deploy_couchdb2.yml
@@ -46,5 +46,8 @@
     - import_tasks: partials/couchdb2_proxy_nginx.yml
       when: not couchdb_use_haproxy
     - import_tasks: partials/couchdb2_proxy_haproxy.yml
-      when: couchdb_use_haproxy|bool
+      when: couchdb_use_haproxy|bool  
+  tags: proxy 
+- name: Deploy keepalived  
+  import_playbook: deploy_keepalived.yml
   tags: proxy
