--- a/src/commcare_cloud/ansible/migrate_on_fresh_install.yml
+++ b/src/commcare_cloud/ansible/migrate_on_fresh_install.yml
@@ -8,7 +8,7 @@
       django_manage:
         command: 'migrate_multi --noinput'
         app_path: "{{ code_home }}"
-        virtualenv: "{{ virtualenv_home }}"
+        virtualenv: "{{ py3_virtualenv_home }}"
       environment:
         CCHQ_IS_FRESH_INSTALL: 1
       when: CCHQ_IS_FRESH_INSTALL is defined and CCHQ_IS_FRESH_INSTALL
@@ -18,5 +18,5 @@
       django_manage:
         command: 'configure_pl_proxy_cluster --create_only'
         app_path: "{{ code_home }}"
-        virtualenv: "{{ virtualenv_home }}"
+        virtualenv: "{{ py3_virtualenv_home }}"
       when: CCHQ_IS_FRESH_INSTALL is defined and CCHQ_IS_FRESH_INSTALL and SEPARATE_FORM_PROCESSING_DBS
