--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
@@ -68,17 +68,6 @@
     - name: install pip requirements
       become: true
       pip:
-        requirements: "{{ code_home }}/requirements/prod-requirements.txt"
-        virtualenv: "{{ virtualenv_source }}"
-        virtualenv_python: "python2.7"
-        chdir: "{{ code_home }}"
-      tags:
-        - slow
-      when: not testing|default(False)
-
-    - name: py3 install pip requirements
-      become: true
-      pip:
         requirements: "{{ code_home }}/requirements-python3/prod-requirements.txt"
         virtualenv: "{{ py3_virtualenv_source }}"
         virtualenv_python: "python3.6"
@@ -86,7 +75,7 @@
       tags:
         - slow
         - py3
-      when: (py3_include_venv is defined and py3_include_venv) and (not testing|default(False))
+      when: not testing|default(False)
 
     - name: chown clone
       become: true
@@ -98,7 +87,7 @@
         recurse: yes
       with_items:
         - "{{ code_source }}"
-        - "{{ virtualenv_source }}"
+        - "{{ py3_virtualenv_source }}"
 
   when: (CCHQ_IS_FRESH_INSTALL is defined and CCHQ_IS_FRESH_INSTALL) or not gitdir.stat.exists or (CREATE_NEW_VIRTUALENV is defined and CREATE_NEW_VIRTUALENV)
 
@@ -109,27 +98,9 @@
       - pip
       - setuptools
     state: latest
-    virtualenv: "{{ virtualenv_home }}"
-
-- name: py3 Upgrade python packages
-  pip:
-    name:
-      - six
-      - pip
-      - setuptools
-    state: latest
     virtualenv: "{{ py3_virtualenv_home }}"
   tags:
     - py3
-
-- name: chown virtualenv
-  become: true
-  file:
-    path: "{{ virtualenv_home }}"
-    state: directory
-    owner: "{{ cchq_user }}"
-    group: "{{ cchq_user }}"
-    recurse: yes
 
 - name: py3 chown virtualenv
   become: true
